--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: okslaet_left
   - board: nice_nano_v2
-    shield: corne_right
+    shield: okslaet_right
