--- a/build.yaml
+++ b/build.yaml
@@ -1,3 +1,5 @@
 include:
   - board: nice_nano_v2
-    shield: unislaet
+    shield: reteals_left
+  - board: nice_nano_v2
+    shield: reteals_right
